--- a/neon/search/sass/3-modules/_input-text.sass
+++ b/neon/search/sass/3-modules/_input-text.sass
@@ -89,7 +89,7 @@
         
   .input-text--outlined
      > input
-          border: 1px solid var(--bbc)
+          // border: 1px solid var(--bbc)
           border-radius: 0
           &:focus
               box-shadow: 0 0 0 2px $accent-color
